k8s/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: haproxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/blogx-backend-go-default: "true"
        io.kompose.service: haproxy
    spec:
      containers:
        - image: sohamkr/blogx_haproxy:0.0
          name: haproxy
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
