k8s/blogx-backend-go-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: blogx-backend-go-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/blogx-backend-go-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/blogx-backend-go-default: "true"
